# tracehouse

./: .dockerignore  .env.example  .gitattributes  .gitignore  LICENSE  README.md  justfile  package-lock.json  package.json
.config/webpack/: webpack.config.ts
.github/workflows/: deploy-docs.yml  grafana-plugin-release.yml  release.yml
docs/: README.md  admin-polling-reference.md  clickhouse-observability-tiers.md  clickhouse-profile-events-classification.md  dashboard-data-sources.md  design-vision.md  frontend.md  future-ideas.md  metrics-calculations.md  ordering-key-algorithm.md  parts-and-lineage.md  proxy-alternatives.md  resources.md
docs/development/: integration-tests.md
docs/metrics/: README.md  cpu.md  distributed-topology.md  engine-internals.md  memory.md  overview.md  pipeline-profile.md  query-analysis.md  reference.md  thread-breakdown.md  time-travel.md  xray.md
docs/prototypes/: engine-internals-prototype.jsx  live-view-prototype.jsx
docs/site/: .gitignore  docusaurus.config.ts  package-lock.json  sidebars.ts
frontend/: .env.example  .gitignore  README.md  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.buildDefines.ts  vite.config.ts  vite.singlefile.config.ts  vitest.config.ts
frontend/scripts/: build-single-html.js
frontend/src/: App.tsx  buildConfig.ts  index.css
grafana-app-plugin/: CHANGELOG.md  Dockerfile  LICENSE  README.md  SUBMISSION_NOTES.md  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json  webpack.config.ts
grafana-app-plugin/provisioning/: docker-compose.yaml
grafana-app-plugin/scripts/: check-runtime-isolation.mjs  fix-sourcemaps.cjs  package-plugin.sh  package-source.sh  validate.sh
grafana-app-plugin/src/: App.tsx  AppConfig.tsx  module.ts  (+5 more)
infra/: README.md
infra/binary/: Cargo.toml
infra/binary/src/: lib.rs  main.rs
infra/binary/tests/: proxy_integration.rs
scripts/: build-release.sh  setup.sh
tools/data-utils/: Dockerfile  pyproject.toml
tools/data-utils/src/data_utils/: capabilities.py  env.py  users.py
tools/data-utils/src/data_utils/cli/: drop.py  generate.py  load.py  merge_triggers.py  mutations.py  queries.py  tui.py
tools/data-utils/src/data_utils/tables/: __init__.py  helpers.py  iceberg_nyc_taxi.py  lakekeeper_nyc_taxi.py  nyc_taxi.py  protocol.py  replacing_merge.py  synthetic_data.py  uk_house_prices.py  web_analytics.py
tools/data-utils/tests/: cluster_fixture.py  conftest.py  test_cluster_ddl.py  test_table_plugins.py  test_ttl_helpers.py
(+462 files in other folders)
