[package]
name = "tracehouse"
version = "0.1.0"
edition = "2021"

[lib]
name = "tracehouse"
path = "src/lib.rs"

[[bin]]
name = "tracehouse"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2.0"
http = "1"
url = "2"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
